--- a/package.json
+++ b/package.json
@@ -13,49 +13,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^12.0.1",
-    "@angular/core": "^12.0.1",
-    "@angular/forms": "^12.0.1",
-    "@angular/platform-browser": "^12.0.1",
-    "@angular/platform-browser-dynamic": "^12.0.1",
-    "@angular/router": "^12.0.1",
-    "@capacitor/android": "^4.0.0",
-    "@capacitor/camera": "^4.0.0",
-    "@capacitor/core": "^4.0.0",
-    "@capacitor/filesystem": "^4.0.0",
-    "@capacitor/ios": "^4.0.0",
-    "@capacitor/preferences": "^4.0.1",
-    "@capacitor/splash-screen": "^4.0.0",
-    "@ionic/angular": "^5.6.7",
+    "@angular/common": "^15.0.3",
+    "@angular/core": "^15.0.3",
+    "@angular/forms": "^15.0.3",
+    "@angular/platform-browser": "^15.0.3",
+    "@angular/platform-browser-dynamic": "^15.0.3",
+    "@angular/router": "^15.0.3",
+    "@capacitor/android": "4.6.1",
+    "@capacitor/camera": "4.1.4",
+    "@capacitor/core": "4.6.1",
+    "@capacitor/filesystem": "4.1.4",
+    "@capacitor/ios": "4.6.1",
+    "@capacitor/preferences": "4.0.2",
+    "@capacitor/splash-screen": "4.1.2",
+    "@ionic/angular": "6.4.0",
     "@ionic/pwa-elements": "^3.0.2",
-    "core-js": "^3.6.5",
-    "rxjs": "^6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "rxjs": "7.6.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.0.1",
-    "@angular/cli": "^12.0.1",
-    "@angular/compiler": "^12.0.1",
-    "@angular/compiler-cli": "^12.0.1",
-    "@angular/language-service": "^12.0.1",
-    "@capacitor/cli": "^4.0.0",
-    "@ionic/angular-toolkit": "^4.0.0",
-    "@types/jasmine": "^3.5.10",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^13.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.2",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "^8.8.2",
-    "tslint": "~6.1.0",
-    "typescript": "^4.2.4"
+    "@angular-devkit/build-angular": "^15.0.3",
+    "@angular/cli": "^15.0.3",
+    "@angular/compiler": "^15.0.3",
+    "@angular/compiler-cli": "^15.0.3",
+    "@angular/language-service": "^15.0.3",
+    "@capacitor/cli": "4.6.1",
+    "@ionic/angular-toolkit": "7.0.0",
+    "@ionic/cli": "6.20.4"
   },
   "description": "Build a photo gallery app that runs on iOS, Android, and the web - with just one codebase"
 }
